--- a/Music_Generation_dsk.ipynb
+++ b/Music_Generation_dsk.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path='C:\\\\Users\\\\DEVANSH KHANDEKAR\\\\DEVANSH\\\\PYTHON_TECHNOGEEKS_PUNE\\\\AppliedAI\\\\char-rnn-keras-master\\\\Music_Generation_dsk\\\\data'\n",
+    "data_path='\\data'\n",
     "f_name='input.txt'"
    ]
   },
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_path='C:\\\\Users\\\\DEVANSH KHANDEKAR\\\\DEVANSH\\\\PYTHON_TECHNOGEEKS_PUNE\\\\AppliedAI\\\\char-rnn-keras-master\\\\Music_Generation_dsk\\\\logs'"
+    "log_path='\\logs'"
    ]
   },
   {
